# 16games

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/GameEngine/: Clock.cpp  Clock.h  Color.cpp  Color.h  ColorList.cpp  ColorList.h  Game.cpp  Game.h  Texture.cpp  Texture.h  UsesRenderer.cpp  UsesRenderer.h
original/: CMakeLists.txt
original/01 Tetris/: CMakeLists.txt  main.cpp
original/02 Doodle Jump/: CMakeLists.txt  main.cpp
original/03 Arkanoid/: CMakeLists.txt  main.cpp
original/04 Snake/: CMakeLists.txt  main.cpp
original/05 Minesweeper/: CMakeLists.txt
original/06 Fifteen-Puzzle/: CMakeLists.txt  main.cpp
original/07 Racing (Top Down)/: CMakeLists.txt  main.cpp
original/08 Outrun/: CMakeLists.txt  main.cpp
original/09 Xonix/: CMakeLists.txt  main.cpp
original/10 Bejeweled/: CMakeLists.txt
original/11 NetWalk (Pipe Puzzle)/: CMakeLists.txt  main.cpp
original/12 Mahjong Solitaire/: main.cpp
original/14 Chess/: Connector.hpp  main.cpp
sdl2/: CMakeLists.txt  sdl2_game_template.cpp
sdl2/01 Tetris/: CMakeLists.txt  main.cpp
sdl2/02 Doodle Jump/: CMakeLists.txt  main.cpp
sdl2/03 Arkanoid/: CMakeLists.txt  main.cpp
